update links