@@ -94,7 +94,7 @@ public class Main
 
 	private static void downloadColdRunner(File consuloPath) throws Exception
 	{
-		URL coldJar = new File("R:\\_github.com\\consulo\\cold\\out\\artifacts\\cold_runner\\cold-runner.jar").toURL(); //FIXME [VISTALL] correct url
+		URL coldJar = new URL("https://github.com/consulo/cold/raw/master/cold-runner/build/cold-runner.jar");
 
 		File coldJarFile = new File(consuloPath, "lib/cold-runner.jar");
 
